Add elements for layout

--- a/puntoVenta.html
+++ b/puntoVenta.html
@@ -142,8 +142,50 @@
                                                 Vitamina C
                                                 <small> 200mgs</small>
                                             </li>
+                                            <li class="list-group-item">
+                                                Minerales 
+                                                <small> 500mgs</small>
+                                            </li>
+                                            <li class="list-group-item">
+                                                Proteina
+                                                <small> 400mgs</small>
+                                            </li>
+                                            <li class="list-group-item">
+                                                Jeringas
+                                                <small> 200mgs</small>
+                                            </li>
+                                            <li class="list-group-item">
+                                                Alcohol
+                                                <small> 500mgs</small>
+                                            </li>
+                                            <li class="list-group-item">
+                                                Algodon
+                                                <small> 400mgs</small>
+                                            </li>
+                                            <li class="list-group-item">
+                                                Vitamina D
+                                                <small> 200mgs</small>
+                                            </li>
                                         </ul>
                                         <ul class="list-group m-3">
+                                            <li class="list-group-item">
+                                                2 unidades X $ 100
+                                            </li>
+                                            <li class="list-group-item">
+                                                2 unidades X $ 50
+                                            </li>
+                                            <li class="list-group-item">
+                                                4 unidades X $ 200
+                                            </li>
+                                            <li class="list-group-item">
+                                                2 unidades X $ 100
+                                            </li>
+                                            <li class="list-group-item">
+                                                2 unidades X $ 50
+                                            </li>
+                                            <li class="list-group-item">
+                                                4 unidades X $ 200
+                                            </li>
                                             <li class="list-group-item">
                                                 2 unidades X $ 100
                                             </li>
@@ -157,7 +199,7 @@
                                     </div>
                                     
                                     <p class="d-flex flex-row-reverse">
-                                        <b> Total: $ 350.00</b> 
+                                        <b> Total: $ 1050.00</b> 
                                     </p>
                                     <div class="d-flex flex-row-reverse">
                                         <button type="button" class="ml-2 btn btn-primary btn-sm">Cobrar</button>
