Add margin bottom btns

--- a/puntoVenta.html
+++ b/puntoVenta.html
@@ -201,7 +201,7 @@
                                     <p class="d-flex flex-row-reverse">
                                         <b> Total: $ 1050.00</b> 
                                     </p>
-                                    <div class="d-flex flex-row-reverse">
+                                    <div class="d-flex flex-row-reverse mb-5">
                                         <button type="button" class="ml-2 btn btn-primary btn-sm">Cobrar</button>
                                         <button type="button" class="ml-2 btn btn-danger btn-sm">Limpiar Todo</button>
                                     </div>
