Add Subtotal and Descuentos

--- a/puntoVenta.html
+++ b/puntoVenta.html
@@ -198,10 +198,14 @@
                                         </ul>
                                     </div>
                                     
-                                    <p class="d-flex flex-row-reverse">
-                                        <b> Total: $ 1050.00</b> 
-                                    </p>
-                                    <div class="d-flex flex-row-reverse mb-5">
+                                    <div class="d-flex flex-row justify-content-end m-3">
+                                        <div class="d-flex flex-column">
+                                            <b class="mt-2"> SubTotal: $ 1050.00</b>
+                                            <b class="mt-2"> Descuentos: $ 150.00</b> 
+                                            <b class="mt-2"> Total: $ 900.00</b>  
+                                        </div>
+                                    </div>
+                                    <div class="d-flex flex-row-reverse mb-5 mr-3">
                                         <button type="button" class="ml-2 btn btn-primary btn-sm">Cobrar</button>
                                         <button type="button" class="ml-2 btn btn-danger btn-sm">Limpiar Todo</button>
                                     </div>
