--- a/puntoVenta.html
+++ b/puntoVenta.html
@@ -82,7 +82,7 @@
                     <!-- Page Heading -->
                     <div class="d-flex align-items-center justify-content-center" style="width: 15vw;">
                         <h1 class="h3 mb-1 text-gray-800 m-2">FarmaFacil</h1> 
-                        <img src="/img/farmaLogo.png" alt="Logo Farmacia" width="20%">   
+                        <img src="./img/farmaLogo.png" alt="Logo Farmacia" width="20%">   
                     </div>
 
 
