Correccion de textos

--- a/puntoVenta.html
+++ b/puntoVenta.html
@@ -158,7 +158,7 @@
                                                 <small> 400mgs</small>
                                             </li>
                                             <li class="list-group-item">
-                                                Jeringas
+                                                Jeringa
                                                 <small> 200mgs</small>
                                             </li>
                                             <li class="list-group-item">
